# lortex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/git-workflow/: SKILL.md
.cursor/rules/: ai-boundary-framework.mdc  ai2ai-maintenance.mdc  code-simplifier.mdc  rust-conventions.mdc  ui-prototype.mdc
.cursor/skills/git-commit-summary/: SKILL.md
.cursor/skills/git-workflow/: SKILL.md
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: agent.rs  error.rs  event.rs  guardrail.rs  lib.rs  memory.rs  message.rs  provider.rs  tool.rs
crates/executor/: AGENTS.md  Cargo.toml
crates/executor/src/: lib.rs  runner.rs  strategy.rs
crates/guardrails/: AGENTS.md  Cargo.toml
crates/guardrails/src/: content_filter.rs  lib.rs  rate_limiter.rs  token_budget.rs  tool_approval.rs
crates/macros/: AGENTS.md  Cargo.toml
crates/macros/src/: lib.rs
crates/memory/: AGENTS.md  Cargo.toml
crates/memory/src/: in_memory.rs  lib.rs  sliding_window.rs
crates/protocols/: AGENTS.md  Cargo.toml
crates/protocols/src/: lib.rs
crates/protocols/src/a2a/: client.rs  mod.rs  types.rs
crates/protocols/src/mcp/: client.rs  mod.rs  server.rs  types.rs
crates/providers/: AGENTS.md  Cargo.toml
crates/providers/src/: anthropic.rs  lib.rs  openai.rs
crates/router/: AGENTS.md  Cargo.toml
crates/router/src/: cost.rs  lib.rs  registry.rs  router.rs  strategy.rs
crates/server/: Cargo.toml
crates/server/admin-web/: index.html  package-lock.json  package.json  vite.config.ts
crates/server/admin-web/src/: App.vue  main.ts
crates/server/admin-web/src/api/: index.ts
crates/server/admin-web/src/locales/: en.ts  index.ts  zh.ts
crates/server/admin-web/src/router/: index.ts
crates/server/admin-web/src/views/: ApiKeys.vue  Layout.vue  Login.vue  Models.vue  Providers.vue  ProvidersModels.vue  Usage.vue
crates/server/src/: circuit_breaker.rs  config.rs  lib.rs  rate_limiter.rs  routes.rs  state.rs
crates/server/src/handlers/: chat.rs  embed.rs  messages.rs  mod.rs  models.rs  passthrough.rs  provider_builder.rs  shared.rs  web.rs
crates/server/src/handlers/admin/: health.rs  keys.rs  mod.rs  models.rs  providers.rs  usage.rs
crates/server/src/layer/: helpers.rs  mod.rs  span_data.rs  usage_layer.rs
crates/server/src/middleware/: auth.rs  mod.rs  proxy_auth.rs
crates/server/src/models/: api_key.rs  health.rs  mod.rs  model.rs  provider.rs  usage.rs
crates/server/src/proto/: anthropic.rs  convert.rs  mod.rs  openai.rs
crates/server/src/store/: error.rs  mod.rs  sqlite.rs  traits.rs
crates/server/tests/: admin_api.rs  proxy_api.rs
crates/swarm/: AGENTS.md  Cargo.toml
crates/swarm/src/: lib.rs  orchestrator.rs  patterns.rs
crates/tools/: AGENTS.md  Cargo.toml
crates/tools/src/: lib.rs  registry.rs
crates/tools/src/builtin/: file.rs  http.rs  mod.rs  shell.rs
docs/: project-methodology.md  session-context.md
docs/ai2ai/: checklist.md  decisions.md  status.md  test-suite.md
docs/ai2ai/iterations/: 001-core-tests.md  002-router-core.md  003a-proxy-store.md  003b-proxy-handler.md  003c-proxy-streaming.md  004a-logging.md  004b-admin-web.md  005a-messages-streaming.md  005b-usage-stats.md  006a-mvp-polish.md  006b-fallback-health-cache.md  007-estimated-chars.md  008-observability-layer.md  009-rate-limiting.md  010-usage-dashboard.md  011-model-rate-limiting.md  012-embeddings-endpoint.md  013-cache-hitrate-extra-headers.md  014-apikey-model-map.md
docs/ai2ai/tasks/: 001-core-tests.md  002-router-core.md  003a-proxy-store.md  003b-proxy-handler.md  003c-proxy-streaming.md  004a-logging.md  004b-admin-web.md  005a-messages-streaming.md  005b-usage-stats.md  006a-mvp-polish.md  006b-fallback-health-cache.md  007-estimated-chars.md  008-observability-layer.md  009-rate-limiting.md  010-usage-dashboard.md  011-model-rate-limiting.md  012-embeddings-endpoint.md  013-cache-hitrate-extra-headers.md  014-apikey-model-map.md
docs/prds/: overview.md  proxy.md
docs/tech/: architecture.md  provider-ua-routing.md  proxy-design.md
examples/machine-ops/: Cargo.toml  main.rs
examples/multi-agent/: Cargo.toml  main.rs
examples/simple-agent/: Cargo.toml  main.rs
examples/vibe-coding/: Cargo.toml  main.rs
src/: lib.rs
tests/: e2e_router.rs  e2e_runner.rs
