[package]
name = "lortex-executor"
version.workspace = true
edition.workspace = true
description = "Lortex 执行引擎：Runner 主循环与执行策略"

[dependencies]
lortex-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
