[package]
name = "lortex-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lortex 记忆实现：InMemory、SlidingWindow"

[dependencies]
lortex-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
