[package]
name = "lortex-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lortex Agent 协议实现：MCP、A2A"

[features]
default = ["mcp"]
mcp = []
a2a = []

[dependencies]
lortex-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
