[package]
name = "lortex-providers"
version.workspace = true
edition.workspace = true
description = "Lortex LLM 提供商实现：OpenAI、Anthropic 等"

[features]
default = ["openai", "anthropic"]
openai = []
anthropic = []

[dependencies]
lortex-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream = "0.3"
